--- a/visualisationserver/backend/pom.xml
+++ b/visualisationserver/backend/pom.xml
@@ -42,5 +42,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>de.moduliertersingvogel</groupId>
+			<artifactId>visualisationutils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
