--- a/usefulansibleroles/roles/install-python3/tasks/main.yml
+++ b/usefulansibleroles/roles/install-python3/tasks/main.yml
@@ -2,6 +2,10 @@
   - name: Install python3
     apt:
       name: python3
-  - name: Install pip3
+
+  - name: Install setup tools
     apt:
-      name: python3-pip
+      name: python3-setuptools
+
+  - name: Install pip3
+    command: easy_install3 pip
