Added missing dependency.

--- a/ansible/vim.yml
+++ b/ansible/vim.yml
@@ -34,6 +34,7 @@
         - ruby-dev
         - git
         - checkinstall
+        - cmake
 
     - name: clone vim
       git: repo=https://github.com/vim/vim.git  dest=/tmp/vim
