--- a/micro/pom.xml
+++ b/micro/pom.xml
@@ -27,7 +27,7 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.0.2</version>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -41,6 +41,7 @@
 			<groupId>com.squareup.okhttp</groupId>
 			<artifactId>okhttp</artifactId>
 			<version>2.5.0</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
