--- a/micro/pom.xml
+++ b/micro/pom.xml
@@ -38,10 +38,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.squareup.okhttp</groupId>
+			<groupId>com.squareup.okhttp3</groupId>
 			<artifactId>okhttp</artifactId>
-			<version>2.5.0</version>
-			<scope>test</scope>
+			<version>3.9.1</version>
 		</dependency>
 
 	</dependencies>
