--- a/usefulansibleroles/roles/install-nodejs/tasks/main.yml
+++ b/usefulansibleroles/roles/install-nodejs/tasks/main.yml
@@ -1,22 +1,16 @@
 ---
-  - name: Ensure apt-transport-https is installed.
-    apt: name=apt-transport-https state=present
+  - name: Download install script
+    get_url:
+      url: https://deb.nodesource.com/setup_8.x
+      dest: /tmp/setup_8.x
+      mode: u+rwx
 
-  - name: Add Nodesource apt key.
-    apt_key:
-      url: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
-      state: present
+  - name: Execute install script
+    become: true
+    shell: /tmp/setup_8.x
 
-  - name: Add NodeSource repositories for Node.js.
-    apt_repository:
-      repo: "{{ item }}"
-      state: present
-    with_items:
-      - "deb https://deb.nodesource.com/node_7.x jessie main"
-      - "deb-src https://deb.nodesource.com/node_7.x jessie main"
-
-  - name: Install node
+  - name: Install nodejs
+    become: true
     apt:
       name: nodejs
       state: present
-      update_cache: yes
