--- a/ansible/vim.yml
+++ b/ansible/vim.yml
@@ -8,8 +8,11 @@
       apt: pkg=aptitude state=present
 
     - name: remove old vim
-      apt: pkg={{ item }} state=absent
-      with_items:
+      apt:
+        name: "{{ packages }}"
+        state: absent
+      vars:
+        packages:
         - vim
         - vim-runtime
         - vim-tiny
@@ -17,8 +20,11 @@
         - gvim
 
     - name: install base packages
-      apt: pkg={{item}} state=present
-      with_items:
+      apt:
+        name: "{{ packages }}"
+        state: present
+      vars:
+        packages:
         - libncurses5-dev
         - libgnome2-dev
         - libgnomeui-dev
@@ -51,9 +57,9 @@
   tasks:
     - name: install dependencies for plugins
       become: true
-      apt: pkg={{item}} state=present
-      with_items:
-        - fonts-powerline
+      apt:
+        name: fonts-powerline
+        state: present
 
     - name: install vundle
       git: repo=https://github.com/VundleVim/Vundle.vim.git dest=/home/{{ ansible_ssh_user }}/.vim/bundle/Vundle.vim
