--- a/ansible/vim.yml
+++ b/ansible/vim.yml
@@ -26,11 +26,8 @@
       vars:
         packages:
         - libncurses5-dev
-        - libgnome2-dev
-        - libgnomeui-dev
         - libgtk2.0-dev
         - libatk1.0-dev
-        - libbonoboui2-dev
         - libcairo2-dev
         - libx11-dev
         - libxpm-dev
@@ -64,16 +61,19 @@
     - name: install vundle
       git: repo=https://github.com/VundleVim/Vundle.vim.git dest=/home/{{ ansible_ssh_user }}/.vim/bundle/Vundle.vim
 
-    - name: clone vimrc
-      git: repo=https://github.com/frankdressel/blog.git dest=/tmp/blog
- 
     - name: copy vimrc
-      command: cp /tmp/blog/ansible/.vimrc /home/{{ ansible_ssh_user }}
+      command: cp .vimrc /home/{{ ansible_ssh_user }}
   
-    - name: install vim plugins
-      command: vim +PluginInstall +qall
-  
-    - name: install ycmd
-      command: ./install.py
+    - name: Make ycm
+      file: name=~/.vim/bundle state=directory
+
+    - name: Download ycm
+      git: repo=https://github.com/ycm-core/YouCompleteMe.git dest=~/.vim/bundle/YouCompleteMe
+
+    - name: install ycm
+      command: ./install.py --clang-completer
       args:
         chdir: ~/.vim/bundle/YouCompleteMe
+
+    - name: install vim plugins
+      command: vim +PluginInstall +qall
