--- a/usefulansibleroles/roles/install-gogs/tasks/main.yml
+++ b/usefulansibleroles/roles/install-gogs/tasks/main.yml
@@ -34,9 +34,16 @@
 - name: 3e. Create git database user
   become: true
   mysql_user:
-    name: git
-    password: git
+    name: gogs
+    password: gogs
     priv: '*.*:ALL'
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+    login_user: 'root'
+
+- name: 3f. Create git database user
+  become: true
+  mysql_db:
+    name: gogs
     login_unix_socket: /var/run/mysqld/mysqld.sock
     login_user: 'root'
 
