--- a/usefulansibleroles/roles/install-gogs/tasks/main.yml
+++ b/usefulansibleroles/roles/install-gogs/tasks/main.yml
@@ -3,12 +3,14 @@
   become: true
   user:
     name: git
+    system: yes
+    create_home: no
 
 - name: 2. Get gogs release
   become: true
   unarchive:
     src: https://github.com/gogs/gogs/releases/download/v0.12.3/gogs_0.12.3_linux_armv8.zip
-    dest: /home/git
+    dest: /srv
     remote_src: true
     owner: git
     group: git
@@ -40,7 +42,7 @@
     login_unix_socket: /var/run/mysqld/mysqld.sock
     login_user: 'root'
 
-- name: 3f. Create git database user
+- name: 3f. Create gogs database
   become: true
   mysql_db:
     name: gogs
@@ -50,7 +52,7 @@
 - name: 4. Copy gogs service file
   become: true
   copy:
-    src: /home/git/gogs/scripts/systemd/gogs.service
+    src: /srv/gogs/scripts/systemd/gogs.service
     dest: /etc/systemd/system/gogs.service
     remote_src: true
 
@@ -66,7 +68,14 @@
   lineinfile:
     path: /etc/systemd/system/gogs.service
     regexp: 'ExecStart.*'
-    line: ExecStart=/home/git/gogs/gogs web
+    line: ExecStart=/srv/gogs/gogs web
+
+- name: 5c. Configure gogs service
+  become: true
+  lineinfile:
+    path: /etc/systemd/system/gogs.service
+    regexp: 'WorkingDirectory.*'
+    line: 'WorkingDirectory=/srv/gogs'
 
 - name: 6. Enable and start service
   become: true
