--- a/ansible/vim.yml
+++ b/ansible/vim.yml
@@ -40,6 +40,7 @@
         - git
         - checkinstall
         - cmake
+        - universal-ctags
 
     - name: clone vim
       git: repo=https://github.com/vim/vim.git  dest=/tmp/vim
