--- a/usefulansibleroles/roles/install-couch/files/local.ini
+++ b/usefulansibleroles/roles/install-couch/files/local.ini
@@ -2,7 +2,16 @@
 single_node=true
 
 [couch_peruser]
-enable = false
+enable = true
+
+[httpd]
+enable_cors = true
+
+[cors]
+origins = *
+credentials = true
+methods = GET, PUT, POST, HEAD, DELETE
+headers = accept, authorization, content-type, origin, referer, x-csrf-token
 
 [admins]
 admin = mysecretpassword
