--- a/usefulansibleroles/roles/install-couch/tasks/main.yml
+++ b/usefulansibleroles/roles/install-couch/tasks/main.yml
@@ -35,6 +35,7 @@
       name: couch
       image: couchdb
       published_ports: 5984:5984
+      recreate: yes
       volumes:
         - /couchdb/data:/opt/couchdb/data
         - /couchdb/etc:/opt/couchdb/etc/local.d
